# esp-webrtc-solution

./: README.md  RELEASE_v1.2.md
.gitlab/ci/: build_webrtc_solutions.yml
components/av_render/: CHANGELOG.md  CMakeLists.txt  idf_component.yml
components/codec_board/: CHANGELOG.md  CMakeLists.txt  Kconfig.projbuild  board_cfg.txt  cfg_parse.c  codec_init.c  idf_component.yml  lcd_init.c
components/esp_peer/: CHANGELOG.md  CMakeLists.txt  idf_component.yml
components/esp_webrtc/: CHANGELOG.md  CMakeLists.txt  idf_component.yml
components/esp_webrtc/impl/kvs_signaling/: CMakeLists.txt  Kconfig  https_client.c  https_client.h  kvs_signaling.c  sigv4_config.h
components/esp_webrtc/impl/kvs_signaling/sigv4/source/: sigv4.c
components/media_lib_utils/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
components/webrtc_utils/: webrtc_utils_time.c
solutions/common/: CMakeLists.txt  idf_component.yml  network.h
solutions/doorbell_demo/: CMakeLists.txt  partitions.csv  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32p4_eye  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp32s31
solutions/doorbell_local/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32p4_eye  sdkconfig.defaults.esp32s3
solutions/doorbell_local/main/: CMakeLists.txt  Kconfig  board.c  common.h  idf_component.yml  main.c  media_sys.c  pedestrain_detect.cpp  settings.h  webrtc.c  webrtc_http_server.c  webrtc_test.html
solutions/janus_demo/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults.esp32s3
(+151 files in other folders)
